--- a/public/detail.html
+++ b/public/detail.html
@@ -50,7 +50,7 @@
     <span id="postUpdateModalClose">&times;</span>
     <div class="postModal_overlay"></div>
     <div class="postModal_content">
-      <h1>게시글 작성</h1>
+      <h1>게시글 수정</h1>
       <div class="input-group">
         <div class="input-form">
           <input type="text" id="update-title" class="form-control" placeholder="제목을 작성하세요." />
